# pookiepages

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.txt
docs/api-reference/: auth.md  bridge.md  config.md  database.md  request.md  response.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: admin.md  ai.md  assets.md  auth.md  database.md  email.md  file-uploads.md  routing.md  vector-search.md
docs/integrations/: cloudflare-r2.md  openai.md
pookiepages/: __init__.py  api.py  app.py  bridge.py  config.py  exceptions.py  request.py  response.py  router.py
pookiepages/admin/: __init__.py  auth.py  discovery.py  views.py
pookiepages/ai/: __init__.py  completions.py  embeddings.py  history.py
pookiepages/assets/: __init__.py  pipeline.py
pookiepages/auth/: __init__.py  config.py  passwords.py  providers.py  sessions.py  signals.py
pookiepages/cli/: init_wizard.py  main.py
pookiepages/cli/commands/: admin.py  build.py  migrate.py  routes.py  run.py  shell.py  version.py
pookiepages/database/: __init__.py  connection.py  encryption.py  tables.py
pookiepages/docs_gen/: __init__.py
pookiepages/email/: __init__.py  backends.py
pookiepages/files/: __init__.py  processors.py
pookiepages/storage/: __init__.py  local.py  s3.py
