[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pookiepages"
version = "0.1.1"
description = "A Python web framework built on Flask and PookieDB"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Grace Peter Mutiibwa", email = "gracepetermutiibwa@gmail.com" }
]
keywords = ["web", "framework", "flask", "pookiedb", "fullstack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "flask>=3.0.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "bcrypt>=4.0.0",
    "authlib>=1.3.0",
    "rcssmin>=1.1.0",
    "rjsmin>=1.2.0",
    "orjson>=3.9.0",
    "pysimdjson>=5.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "zvec>=0.5.1",
    "textual>=0.60.0",
    "boto3>=1.34.0",
    "pookiedb>=0.1.4",
    "click>=8.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
pookiepages = "pookiepages.cli.main:cli"

[project.urls]
Homepage = "https://github.com/GracePeterMutiibwa/pookiepages"
Documentation = "https://pookiepages.readthedocs.io"
Repository = "https://github.com/GracePeterMutiibwa/pookiepages"

[tool.hatch.build.targets.wheel]
packages = ["pookiepages"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
